[gd_scene load_steps=4 format=3 uid="uid://ditjke3lduyrb"]

[ext_resource type="Script" path="res://UIObjects/PlayerHUD/TabStatusMenu/QuestTracker.gd" id="1_4qg2l"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_ltgi0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7drk3"]
bg_color = Color(0.808998, 0.808998, 0.808998, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="QuestTracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4qg2l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="QuestTrackerLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_ltgi0")
theme_override_font_sizes/font_size = 30
text = "Objectives
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuestNameLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_ltgi0")
theme_override_font_sizes/font_size = 30
text = "Quest Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7drk3")

[node name="QuestStepVboxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="QuestCompleteLabel" type="Label" parent="VBoxContainer/MarginContainer3"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.913725, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_ltgi0")
theme_override_font_sizes/font_size = 30
text = "Quest Complete"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 12

[node name="NoObjectivesLabel" type="Label" parent="VBoxContainer/MarginContainer4"]
visible = false
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_ltgi0")
theme_override_font_sizes/font_size = 30
text = "None"
horizontal_alignment = 1
vertical_alignment = 1
